--- a/src/app/pages/manage/manage.component.html
+++ b/src/app/pages/manage/manage.component.html
@@ -1,6 +1,7 @@
 <app-ba-slider-menu (changeStatus)="changeStatus($event)" [menuShow]="menuShow">
 </app-ba-slider-menu>
 
+<app-ba-top-menu></app-ba-top-menu>
 
 <button type="button" class="fixed_toggle" (click)="checkMenuShow()">
   <span class="icon-menu"></span>
